use userRights to acces elements
verinice-veo#3685 verinice-veo#3627